--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div class="container" style="text-align:center">
   <h1>
     {{ title }}
   </h1>
   <app-search-bar></app-search-bar>
+  <app-options></app-options>
 </div>
 
 <router-outlet></router-outlet>
