--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,8 +2,17 @@
   <h1>
     {{ title }}
   </h1>
-  <app-search-bar></app-search-bar>
-  <app-options></app-options>
+
+  <div class="row m-4">
+    <div class="col"></div>
+    <app-search-bar></app-search-bar>
+    <div class="col"></div>
+  </div>
+  <div class="row m-4">
+    <div class="col"></div>
+    <app-options></app-options>
+    <div class="col"></div>
+  </div>
 </div>
 
 <router-outlet></router-outlet>
