--- a/client/src/app/components/options/options.component.html
+++ b/client/src/app/components/options/options.component.html
@@ -1,8 +1,29 @@
-<div ngbDropdown class="d-inline-block">
-  <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Toggle dropdown</button>
-  <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-    <button ngbDropdownItem>Action - 1</button>
-    <button ngbDropdownItem>Another Action</button>
-    <button ngbDropdownItem>Something else is here</button>
+<div>
+  <div ngbDropdown class="d-inline-block">
+    <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Select</button>
+    <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+      <button ngbDropdownItem>Hot</button>
+      <button ngbDropdownItem>New</button>
+      <button ngbDropdownItem>Top</button>
+    </div>
+  </div>
+  <div ngbDropdown class="d-inline-block">
+    <button class="btn btn-outline-primary" id="dropdownBasic2" ngbDropdownToggle>Timeframe</button>
+    <div ngbDropdownMenu aria-labelledby="dropdownBasic2">
+      <button ngbDropdownItem>Past Hour</button>
+      <button ngbDropdownItem>Past 24 Hours</button>
+      <button ngbDropdownItem>Past Week</button>
+      <button ngbDropdownItem>Past Month</button>
+      <button ngbDropdownItem>Past Year</button>
+      <button ngbDropdownItem>Of All Time</button>
+    </div>
+  </div>
+  <div ngbDropdown class="d-inline-block">
+    <button class="btn btn-outline-primary" id="dropdownBasic3" ngbDropdownToggle>Select</button>
+    <div ngbDropdownMenu aria-labelledby="dropdownBasic3">
+      <button ngbDropdownItem>Hot</button>
+      <button ngbDropdownItem>New</button>
+      <button ngbDropdownItem>Top</button>
+    </div>
   </div>
 </div>
