--- a/client/src/app/components/options/options.component.html
+++ b/client/src/app/components/options/options.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div ngbDropdown class="d-inline-block">
+  <div ngbDropdown class="d-inline-block m-2">
     <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Select</button>
     <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
       <button ngbDropdownItem>Hot</button>
@@ -7,7 +7,7 @@
       <button ngbDropdownItem>Top</button>
     </div>
   </div>
-  <div ngbDropdown class="d-inline-block">
+  <div ngbDropdown class="d-inline-block m-2">
     <button class="btn btn-outline-primary" id="dropdownBasic2" ngbDropdownToggle>Timeframe</button>
     <div ngbDropdownMenu aria-labelledby="dropdownBasic2">
       <button ngbDropdownItem>Past Hour</button>
@@ -16,14 +16,6 @@
       <button ngbDropdownItem>Past Month</button>
       <button ngbDropdownItem>Past Year</button>
       <button ngbDropdownItem>Of All Time</button>
-    </div>
-  </div>
-  <div ngbDropdown class="d-inline-block">
-    <button class="btn btn-outline-primary" id="dropdownBasic3" ngbDropdownToggle>Select</button>
-    <div ngbDropdownMenu aria-labelledby="dropdownBasic3">
-      <button ngbDropdownItem>Hot</button>
-      <button ngbDropdownItem>New</button>
-      <button ngbDropdownItem>Top</button>
     </div>
   </div>
 </div>
