Fixed forms and styling

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,11 +8,9 @@
   </div>
 
   <div class="row m-4 p-4 option-block">
-    <div class="col"></div>
-    <app-search-bar></app-search-bar>
-    <div class="col"></div>
-    <app-options></app-options>
-    <div class="col"></div>
+    <div class="col-md-12">
+      <app-search-bar></app-search-bar>
+    </div>
   </div>
 
   <div class="row m-4 p-4 main-block">
