--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -13,18 +13,11 @@
 
     <body>
         <app-root></app-root>
-        <!-- es5 -->
-        <script type="text/javascript" src="{% static 'runtime-es5.js' %}"></script>
-        <script type="text/javascript" src="{% static 'polyfills-es5.js' %}"></script>
-        <script type="text/javascript" src="{% static 'main-es5.js' %}"></script>
-        <script type="text/javascript" src="{% static 'styles-es5.js' %}"></script>
-        <script type="text/javascript" src="{% static 'vendor-es5.js' %}"></script>
 
-        <!-- es2015 -->
-        <script type="text/javascript" src="{% static 'runtime-es2015.js' %}"></script>
-        <script type="text/javascript" src="{% static 'polyfills-es2015.js' %}"></script>
-        <script type="text/javascript" src="{% static 'main-es2015.js' %}"></script>
-        <script type="text/javascript" src="{% static 'styles-es2015.js' %}"></script>
-        <script type="text/javascript" src="{% static 'vendor-es2015.js' %}"></script>
+        <script type="text/javascript" src="{% static 'runtime.js' %}"></script>
+        <script type="text/javascript" src="{% static 'polyfills.js' %}"></script>
+        <script type="text/javascript" src="{% static 'main.js' %}"></script>
+        <script type="text/javascript" src="{% static 'styles.js' %}"></script>
+        <script type="text/javascript" src="{% static 'vendor.js' %}"></script>
     </body>
 </html>
