Add cleaner view and hover effects

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,12 +1,3 @@
-.title-block {
-  background-color: #fad6ee;
-}
-
-.main-block {
-  background-color: #dcd6fa;
-}
-
 .option-block {
-  background-color: #d6faec;
+  border: 0.15em solid #b7b7b7;
 }
-/*# sourceMappingURL=app.component.css.map */
