--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -17,10 +17,8 @@
     </div>
   </div>
 
-  <div class="row m-4 p-4 main-block">
-    <div class="col-md-12">
-      <app-info-display [loading]="loading" [rawInfo]="rawInfo"></app-info-display>
-    </div>
+  <div class="row m-4 main-block">
+    <app-info-display [loading]="loading" [rawInfo]="rawInfo"></app-info-display>
   </div>
 </div>
 
