--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,11 +1,9 @@
 .title-block {
-  background-color: #fad6ee;
 }
 
 .main-block {
-  background-color: #dcd6fa;
 }
 
 .option-block {
-  background-color: #d6faec;
+  border: 0.15em solid #b7b7b7;
 }
