--- a/client/src/app/components/single-post-display/single-post-display.component.html
+++ b/client/src/app/components/single-post-display/single-post-display.component.html
@@ -1,4 +1,11 @@
-<!-- <div *ngFor="let data of postData">
-  {{ data["detail"][0]["text"] }}
-</div> -->
-HI
+<div class="p-4 mt-3 mb-3 single-post">
+  <span
+    class="single-line-in-post"
+    *ngFor="let data of postData"
+    placement="right"
+    ngbTooltip="{{ formatTooltip(data) }}"
+    [style.color]="colorize(data['score'])"
+  >
+    {{ data["text"] }}
+  </span>
+</div>
