--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,6 +7,13 @@
     <div class="col"></div>
   </div>
 
+  <div>Access Token: {{ this.redditAuthService.access_token }}</div>
+  <div *ngIf="this.redditAuthService.access_token.includes('ERROR')">
+    <button class="btn btn-outline-primary m-2" (click)="onReauthClick()">
+      Reauthenticate
+    </button>
+  </div>
+
   <div class="row m-4 p-4 option-block">
     <div class="col-md-12">
       <app-search-bar
