--- a/client/src/app/components/info-display/info-display.component.html
+++ b/client/src/app/components/info-display/info-display.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="showInfo && !loading">
-  <h3 class="mt-2">{{ subredditTitle }}</h3>
+  <h3 class="mt-2">{{ redditTitle }}</h3>
   <div class="mt-4 mb-4">
     <h4>Average Magnitude: {{ magnitudeAvg.toFixed(4) }}</h4>
     <h4>Average Score: {{ scoreAvg.toFixed(4) }}</h4>
