--- a/client/src/app/components/search-bar/search-bar.component.html
+++ b/client/src/app/components/search-bar/search-bar.component.html
@@ -5,9 +5,9 @@
         <input
           type="text"
           class="form-control"
-          name="subreddit-name"
-          placeholder="Enter subreddit here"
-          [(ngModel)]="current_subreddit"
+          name="reddit-name"
+          placeholder="Enter reddit link here"
+          [(ngModel)]="current_reddit"
         />
       </div>
       <div class="col-md-2">
