--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,6 +2,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 body {
-  background-color: #f8f8f8;
+  background-color: #191d3e;
+  color: #d0d0d0;
   font-family: monospace;
 }
