--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -11,3 +11,17 @@
 .fullWidth {
   width: 100%;
 }
+
+.description {
+  transition: max-height 0.1s ease-in-out;
+}
+
+.show-css {
+  max-height: 15em;
+  overflow-y: hidden;
+}
+
+.hide-css {
+  max-height: 0em;
+  overflow-y: hidden;
+}
