Fixed host and color

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -25,7 +25,8 @@
         [loading]="loading"
       ></app-search-bar>
       <div [className]="'description ' + (showDescription ? 'show-css' : 'hide-css')">
-        <p>Enter the url of the subreddit or the reddit post which you wish to analyze.</p>
+        <p>Enter the url of the subreddit or the reddit post.</p>
+        <p>Enter the number of posts to analyze.</p>
         <p>This website requires cookies to be enabled.</p>
       </div>
     </div>
