--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -9,6 +9,13 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}" />
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({
+                google_ad_client: "ca-pub-9520245496387477",
+                enable_page_level_ads: true
+            });
+        </script>
     </head>
 
     <body>
