--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,22 +1,27 @@
-.option-block {
-  border: 0.15em solid #b7b7b7;
+.navbar-bg {
+  background-color: #2c3157;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 1.2em;
 }
 
-.fullWidth {
-  width: 100%;
+.navbar-center {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
-.description {
-  -webkit-transition: max-height 0.1s ease-in-out;
-  transition: max-height 0.1s ease-in-out;
+.navLinkSize {
+  font-size: 1.2em;
+  color: #a0a4d7;
 }
 
-.show-css {
-  max-height: 15em;
-  overflow-y: hidden;
-}
-
-.hide-css {
-  max-height: 0em;
-  overflow-y: hidden;
+.titleSize {
+  font-size: 1.2em;
 }
