Added amazon ads

--- a/client/src/app/components/main-display/main-display.component.html
+++ b/client/src/app/components/main-display/main-display.component.html
@@ -1,5 +1,14 @@
+<iframe
+  src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ez&f=ifr&linkID=274d498d1a241669f5834d959029141e&t=reddisentimen-20&tracking_id=reddisentimen-20"
+  width="728"
+  height="90"
+  scrolling="no"
+  border="0"
+  marginwidth="0"
+  style="border:none;"
+  frameborder="0"
+></iframe>
 <h4 class="p-4">Reddit Sentiment</h4>
-
 <div *ngIf="this.redditAuthService.access_token.includes('ERROR')">
   <p>Error authenticating your reddit access token. Authenticate below.</p>
   <button class="btn btn-outline-primary m-3" (click)="onReauthClick()">
